Adding sonarqube recommendations