@@ -63,7 +63,6 @@ import org.testng.annotations.Test;
 
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 
 @SpringBootTest
@@ -238,7 +237,7 @@ public class SimpleChampionshipTest extends AbstractTestNGSpringContextTests {
         final Group group = groupProvider.getGroups(tournament).get(0);
         TournamentFightStatisticsDTO tournamentFightStatisticsDTO =
                 fightStatisticsController.estimate(tournamentConverter.convert(new TournamentConverterRequest(tournament)), MEMBERS,
-                        teamConverter.convertAll(group.getTeams().stream().map(TeamConverterRequest::new).collect(Collectors.toList())));
+                        teamConverter.convertAll(group.getTeams().stream().map(TeamConverterRequest::new).toList()));
         Assert.assertEquals(tournamentFightStatisticsDTO.getFightsNumber().intValue(), group.getFights().size());
         Assert.assertEquals(tournamentFightStatisticsDTO.getDuelsNumber().intValue(), group.getFights().size() * MEMBERS);
     }
