@@ -35,7 +35,6 @@ import org.springframework.stereotype.Controller;
 
 import java.util.List;
 import java.util.Locale;
-import java.util.stream.Collectors;
 
 @Controller
 public class HtmlController {
@@ -58,7 +57,7 @@ public class HtmlController {
     public BlogExporter generateBlogCode(Locale locale, TournamentDTO tournament) {
         final List<RoleDTO> roleDTOS = roleController.get(tournament);
         return new BlogExporter(messageSource, locale, tournament, roleDTOS, groupController.get(tournament),
-                roleDTOS.stream().map(RoleDTO::getParticipant).collect(Collectors.toList()), rankingController.getTeamsScoreRanking(tournament),
+                roleDTOS.stream().map(RoleDTO::getParticipant).toList(), rankingController.getTeamsScoreRanking(tournament),
                 rankingController.getCompetitorsScoreRanking(tournament));
 
     }
